--- a/custom-addons/hr_salary_increment/views/hr_salary_increment_view.xml
+++ b/custom-addons/hr_salary_increment/views/hr_salary_increment_view.xml
@@ -30,15 +30,15 @@
                 <header>
                     <button name="action_submit" type="object" string="Submit" class="btn-primary"
                         states="draft"
-                        groups="hr_salary_increment.group_hr_officer,base.group_system"
+                        groups="user_group.group_hr_office,base.group_system"
                         confirm="Are you sure you want to process this? Plaese double check it"
                     />
                     <button name="action_approve" type="object" string="Approve" class="btn-success"
-                        states="submitted" groups="hr_salary_increment.group_hr_director"
+                        states="submitted" groups="user_group.group_hr_director"
                         confirm="Are you sure you want to process this? Plaese double check it" />
                     <button name="action_reject" type="object" string="Reject" class="btn-danger"
                         states="submitted"
-                        groups="hr_salary_increment.group_hr_director,base.group_system" />
+                        groups="user_group.group_hr_director,base.group_system" />
                     <field name="state" widget="statusbar"
                         statusbar_visible="draft,submitted,approved,rejected" />
                 </header>
@@ -64,7 +64,7 @@
                                 string="Filter Employees"
                                 class="btn-primary"
                                 states="draft"
-                                groups="hr_salary_increment.group_hr_officer,base.group_system" />
+                                groups="user_group.group_hr_office,base.group_system" />
                         </div>
                     </group>
                     <notebook>
