--- a/custom-addons/hr_recruitment_request/views/recruitment_request_view.xml
+++ b/custom-addons/hr_recruitment_request/views/recruitment_request_view.xml
@@ -10,8 +10,8 @@
                     <button name="action_reject_hr_director" type="object" string="Refuse" groups="user_group.group_hr_director" attrs="{'invisible': [('state_by_hr_director', 'in', ['approved', 'refused'])]}"/>
 
                     <!-- approval by dco -->
-                    <button name="action_approve_dceo" type="object" string="Accept" groups="user_group.group_dceo" attrs="{'invisible': ['|', ('state_by_dceo', 'in', ['approved', 'refused']), ('state_by_hr_director', '!=', 'approved')]}"/>
-                    <button name="action_reject_dceo" type="object" string="Refuse" groups="user_group.group_dceo" attrs="{'invisible': ['|', ('state_by_dceo', 'in', ['approved', 'refused']), ('state_by_hr_director', '!=', 'approved')]}"/>
+                    <button name="action_approve_dceo" type="object" string="Accept" groups="user_group.group_admin_dceo" attrs="{'invisible': ['|', ('state_by_dceo', 'in', ['approved', 'refused']), ('state_by_hr_director', '!=', 'approved')]}"/>
+                    <button name="action_reject_dceo" type="object" string="Refuse" groups="user_group.group_admin_dceo" attrs="{'invisible': ['|', ('state_by_dceo', 'in', ['approved', 'refused']), ('state_by_hr_director', '!=', 'approved')]}"/>
 
                     <!-- approval by ceo -->
                     <button name="action_approve_ceo" type="object" string="Accept" groups="user_group.group_ceo" attrs="{'invisible': ['|', ('state_by_ceo', 'in', ['approved', 'refused']),  ('state_by_dceo', '!=', 'approved')]}"/>
@@ -46,14 +46,14 @@
                                 <field name="recruitment_type" groups="user_group.group_hr_director" />
                                 <field name="comment_by_hr_director" groups="user_group.group_hr_director"/>
 
-                                <field name="recruitment_type" groups="user_group.group_dceo,user_group.group_ceo" readonly="1"  />
-                                <field name="comment_by_hr_director" groups="user_group.group_dceo,user_group.group_ceo" readonly="1" />
+                                <field name="recruitment_type" groups="user_group.group_admin_dceo,user_group.group_ceo" readonly="1"  />
+                                <field name="comment_by_hr_director" groups="user_group.group_admin_dceo,user_group.group_ceo" readonly="1" />
                             </group>
                         </page>
 
                         <page string="DCEO Comment"  attrs="{'invisible': [('state_by_dceo', 'not in', ['approved', 'refused'])]}">
                             <group>
-                                <field name="comment_by_dceo" groups="user_group.group_dceo"/>
+                                <field name="comment_by_dceo" groups="user_group.group_admin_dceo"/>
                                 <field name="comment_by_dceo" groups="user_group.group_hr_director,user_group.group_ceo" readonly="1" />
                             </group>
                         </page>
@@ -61,7 +61,7 @@
                         <page string="CEO Comment"  attrs="{'invisible': [('state_by_ceo', 'not in', ['approved', 'refused'])]}">
                             <group>
                                 <field name="comment_by_ceo" groups="user_group.group_ceo" />
-                                <field name="comment_by_ceo" groups="user_group.group_dceo,user_group.group_hr_director"  readonly="1"/>
+                                <field name="comment_by_ceo" groups="user_group.group_admin_dceo,user_group.group_hr_director"  readonly="1"/>
                             </group>
                         </page>
                     </notebook>
