--- a/custom-addons/hr_medical_coverage/views/menu.xml
+++ b/custom-addons/hr_medical_coverage/views/menu.xml
@@ -24,7 +24,8 @@
     <!-- Main Menu for Medical Coverage -->
     <menuitem id="menu_medical_coverage_root"
         name="Medical Coverage"
-        sequence="20" />
+        parent="hr.menu_employee_benefits"
+        sequence="1" />
 
 
     <!-- Dashboard menu -->
@@ -32,6 +33,7 @@
         name="Dashboard"
         parent="menu_medical_coverage_root"
         action="hr_medical_coverage_dashboard_action"
+        sequence="1"
         groups="user_group.group_hr_office,user_group.group_finance_office,base.group_system" />
 
 
@@ -46,10 +48,10 @@
         name="Medical Credit Bill"
         parent="menu_medical_coverage_root"
         action="action_medical_pre_request"
-        sequence="2" />
+        sequence="3" />
 
     <menuitem id="menu_medical_coverage_organization"
-        name="Institution"
+        name="Medical Institution"
         parent="menu_medical_coverage_root"
         action="action_medical_coverage_organization"
         groups="user_group.group_hr_office,base.group_system"
