--- a/custom-addons/hr_performance/views/menu.xml
+++ b/custom-addons/hr_performance/views/menu.xml
@@ -1,6 +1,7 @@
 <odoo>
     <!-- Root Menu for Performance -->
-    <menuitem id="menu_hr_performance_root" name="Performance" sequence="10" />
+    <menuitem id="menu_hr_performance_root" name="Employees Performance"
+        parent="hr.menu_employee_root" sequence="10" />
 
     <!-- Submenu for Evaluation Schedules -->
     <menuitem id="menu_hr_evaluation_schedule"
@@ -24,4 +25,12 @@
         action="action_hr_performance_evaluation_report"
         groups="user_group.group_hr_office,base.group_system"
         sequence="3" />
+
+    <!-- submenu for reporting -->
+    <menuitem id="menu_hr_evaluation_kpi"
+        name="KPIs(Survey)"
+        parent="menu_hr_performance_root"
+        action="survey.action_survey_form"
+        groups="user_group.group_hr_office,base.group_system"
+        sequence="4" />
 </odoo>
