--- a/custom-addons/hr_salary_increment/views/menu.xml
+++ b/custom-addons/hr_salary_increment/views/menu.xml
@@ -4,7 +4,7 @@
     <menuitem
         id="hr_salary_increment_menu"
         name="Salary Increment"
-        parent="hr.menu_hr_root"
+        parent="hr.menu_employee_root"
         sequence="20" />
 
     <!-- Submenu for Batch Processing -->
@@ -18,8 +18,8 @@
     <!-- Bind Action to Batch Menu -->
     <menuitem
         id="batch_salary_increment_list_menu_request"
-        name="Salary Increment"
-        parent="batch_salary_increment_menu"
+        name="Batch Salary Increment"
+        parent="hr_salary_increment_menu"
         action="action_hr_salary_increment_batch"
         sequence="1" />
 
@@ -37,14 +37,15 @@
     <!-- Dashboard menu -->
     <menuitem id="menu_salary_increment_dashboard"
         name="Reporting"
-        parent="batch_salary_increment_menu"
+        parent="hr_salary_increment_menu"
         action="action_hr_salary_increment_batch_line_graph"
+        groups="user_group.group_hr_director,user_group.group_hr_office"
         sequence="1" />
 
     <!-- <menuitem
         id="batch_salary_increment_list_menu_approve"
         name="Approve Salary Increment"
-        parent="batch_salary_increment_menu"
+        parent="hr_salary_increment_menu"
         action="action_hr_salary_increment_batch"
         sequence="2" /> -->
 </odoo>
