--- a/custom-addons/hr_training/views/hr_request.xml
+++ b/custom-addons/hr_training/views/hr_request.xml
@@ -8,13 +8,14 @@
             <form string="HR Director Training Request">
                 <header>
                     <!-- approval by dco -->
-                    <button name="action_approve_planning" type="object" string="Accept" groups="hr_training.group_hr_training_planning_directorate" attrs="{'invisible': [('state_by_planning', 'in', ['approved', 'refused'])]}"/>
-                    <button name="action_reject_planning" type="object" string="Refuse" groups="hr_training.group_hr_training_planning_directorate" attrs="{'invisible': [('state_by_planning', 'in', ['approved', 'refused'])]}"/>
+                    <button name="action_request_approval" string="Request Training" type="object" class="btn-primary"   groups="user_group.group_hr_director" attrs="{'invisible': [('combined_state', 'in', ['requested', 'approved'])]}"/>
+                    <button name="action_approve_planning" type="object" string="Accept" groups="user_group.group_planning_directorate" attrs="{'invisible': [('state_by_planning', 'in', ['approved', 'refused'])]}"/>
+                    <button name="action_reject_planning" type="object" string="Refuse" groups="user_group.group_planning_directorate" attrs="{'invisible': [('state_by_planning', 'in', ['approved', 'refused'])]}"/>
 
                     <!-- approval by ceo -->
-                    <button name="action_approve_ceo" type="object" string="Accept" groups="hr_training.group_hr_training_ceo" attrs="{'invisible': ['|', ('state_by_ceo', 'in', ['approved', 'refused']),  ('state_by_planning', '!=', 'approved')]}"/>
-                    <button name="action_reject_ceo" type="object" string="Refuse" groups="hr_training.group_hr_training_ceo" attrs="{'invisible': ['|', ('state_by_ceo', 'in', ['approved', 'refused']),  ('state_by_planning', '!=', 'approved')]}"/>
-                    <field name="combined_state" widget="statusbar" statusbar_visible="approved,refused,pending"/>
+                    <button name="action_approve_ceo" type="object" string="Accept" groups="user_group.group_ceo" attrs="{'invisible': ['|', ('state_by_ceo', 'in', ['approved', 'refused']),  ('state_by_planning', '!=', 'approved')]}"/>
+                    <button name="action_reject_ceo" type="object" string="Refuse" groups="user_group.group_ceo" attrs="{'invisible': ['|', ('state_by_ceo', 'in', ['approved', 'refused']),  ('state_by_planning', '!=', 'approved')]}"/>
+                    <field name="combined_state" widget="statusbar" statusbar_visible="draft,requested,approved,refused"/>
 
                 </header>
                 <sheet>
@@ -22,18 +23,18 @@
                         <field name="name" placeholder="Request Name" required="True" style="font-size: min(4vw, 2.6rem);"/>
                     </h1>
                     <group>
-                        <field name="attachment_ids" widget="many2many_binary"/>
+                        <field name="attachment_ids" widget="many2many_binary" attrs="{'readonly': [('combined_state', 'not in', ['draft', 'refused'])]}"/>
                     </group>
                     <div>
                         <span>Your training description should be descriptive and clear.</span>
                     </div>
-                    <field name='description' string='Description'/>
+                    <field name='description' string='Description' attrs="{'readonly': [('combined_state', 'not in', ['draft', 'refused'])]}"/>
                     <field name="state_by_ceo" invisible="1"/>
                     <field name="state_by_planning" invisible="1"/>
                     <field name="combined_state" invisible="1"/>
                     <notebook>
                         <page string="Training Programs">
-                            <field name="training_programs">
+                            <field name="training_programs"  attrs="{'readonly': [('combined_state', 'not in', ['draft', 'refused'])]}">
                                 <tree >                                    <!-- editable="bottom"-->
                                     <field name="program_name"/>
                                     <field name="departement_id"/>
@@ -144,7 +145,6 @@
         <field name="name">HR Director Training Plan</field>
         <field name="res_model">hrtraining.request</field>
         <field name="view_mode">kanban,tree,form</field>
-
     </record>
 
 </odoo>
