--- a/custom-addons/hr_training/views/menu.xml
+++ b/custom-addons/hr_training/views/menu.xml
@@ -1,7 +1,7 @@
 <odoo>
     <data>
-        <menuitem id="menu_hr_training" name="Training" parent="hr.menu_hr_root"/>
-        <menuitem id="dept_request_menu" name="Training Request" parent="menu_hr_training" action="dept_request_action" groups="hr_training.group_hr_training_department_director,hr_training.group_hr_training_hr_officer"/>
-        <menuitem id="HRDirector_request_menu" name="HR Director Plan" parent="menu_hr_training" action="hrDirector_request_action" groups="hr_training.group_hr_training_planning_directorate,hr_training.group_hr_training_hr_officer,hr_training.group_hr_training_ceo"/>
+        <menuitem id="menu_hr_training" name="Training" parent="hr.menu_hr_planning"/>
+        <menuitem id="dept_request_menu" name="Training Request" parent="menu_hr_training" action="dept_request_action" groups="user_group.group_director,user_group.group_hr_director"/>
+        <menuitem id="HRDirector_request_menu" name="HR Director Plan" parent="menu_hr_training" action="hrDirector_request_action" groups="user_group.group_hr_director,user_group.group_planning_directorate,user_group.group_ceo"/>
     </data>
 </odoo>
