--- a/custom-addons/hr_education/views/dept_request.xml
+++ b/custom-addons/hr_education/views/dept_request.xml
@@ -5,55 +5,72 @@
         <field name="model">education.department.request</field>
         <field name="arch" type="xml">
             <form string="Education Request">
+                <group>
+                    <field name="state" invisible="1"/>
+                    <field name="is_hr_office" invisible="1"/>
+                    <field name="is_department_manager" invisible="1"/>
+                    <field name="state" invisible="1"/>
+                    <field name="is_resubmitted" invisible="1"/>
+                    <field name="hr_reason_is_visible" invisible="1"/>
+                </group>
                 <header>
-                    <button name="action_request_approval" 
-                        string="Request Education" 
+                    <button name="action_submit" 
+                        string="Submit" 
                         type="object"  
-                        groups="planning.group_department_manager" 
-                        attrs="{'invisible': [('state', 'in', ['requested', 'approved'])]}"
+                        groups="user_group.group_department_manager" 
+                        attrs="{'invisible': ['|',('is_department_manager','=',False),('state', '!=', 'draft')]}"
                         class="btn-success"
                         confirm="Are you sure you want to submit the request?"
+                    />
+                    <button name="action_resubmit" 
+                        string="Resubmit" 
+                        type="object"  
+                        groups="user_group.group_department_manager" 
+                        attrs="{'invisible': ['|',('is_department_manager','=',False),('state', '!=', 'rejected')]}"
+                        class="btn-success"
+                        confirm="Are you sure you want to Resubmit the request?"
                     />
                     <button name="action_approve_request" 
                         string="Approve" 
                         type="object" 
-                        groups="planning.group_hr_director" 
-                        attrs="{'invisible': [('state', 'in', ['draft', 'approved', 'rejected'])]}"
+                        groups="user_group.group_hr_director" 
+                        attrs="{'invisible': [('state', '!=', 'submitted')]}"
                         class="btn-success"
                         confirm="Are you sure you want to Approve the request?"
                         />
                     <button name="action_reject_request" 
                         string="Reject" 
                         type="object" 
-                        groups="planning.group_hr_director" 
-                        attrs="{'invisible': [('state', 'in', ['draft', 'approved', 'rejected'])]}"
+                        groups="user_group.group_hr_director" 
+                        attrs="{'invisible': [('state', '!=', 'submitted')]}"
                         class="btn-danger"
                         confirm="Are you sure you want to Reject the request?"
                         />
 
-                    <field name="state" widget="statusbar" statusbar_visible="draft,requested,approved,rejected"/>
+                    <field name="state" widget="statusbar" statusbar_visible="draft,submitted,approved,rejected"/>
                 </header>
                 <sheet>
                     <h1 class="d-flex flex-row">
                         <field name="name" placeholder="Request Name" required="True" style="font-size: min(4vw, 2.6rem);"/>
                     </h1>
                     <group>
-                        <field name='department_id' />
-                        <field name="year" />
+                        <field name='department_id' options="{'no_open':True}"/>
+                        <field name="year" attrs="{'readonly':[('state','!=','draft')]}"/>
                         <field name="total_employee_count" readonly="1"/>
-                    </group>
-                    <group>
-                        <field name="attachment_ids" widget="many2many_binary"/>
                     </group>
                     <div>
                         <strong>Description</strong>
                     </div>
-                    <field name='description' string='Description' placeholder="Your education request description should be descriptive and clear."/>
+                    <field name='description' string='Description' placeholder="Your education request description should be descriptive and clear." attrs="{'readonly':['|',('is_department_manager','=',False),('state','not in',['draft','rejected'])]}"/>
+                    <group>
+                        <field name="hr_reason" attrs="{'invisible':[('hr_reason_is_visible','=',False)], 'readonly':['|',('is_hr_office','=', False),('state','!=','submitted')]}"/>
+                        <field name="attachment_ids" widget="many2many_binary" attrs="{'readonly':['|',('is_department_manager','=',False),('state','not in',['draft','rejected'])]}"/>
+                    </group>
 
                     <notebook>
                         <page string="Education Programs">
-                            <field name="education_programs">
-                               <tree >  <!--  editable="bottom"-->
+                            <field name="education_programs" attrs="{'readonly':['|',('is_department_manager','=',False),('state','not in',['draft','rejected'])]}">
+                               <tree >
                                     <field name="program_name"/>
                                     <field name="start_date"/>
                                     <field name="end_date"/>
