changes on discipline case kanban view , done!

--- a/custom-addons/hr_discipline_case2/views/discipline_case_views.xml
+++ b/custom-addons/hr_discipline_case2/views/discipline_case_views.xml
@@ -196,14 +196,7 @@
                                 <div>Employee: <field name="accused_employee_id"/></div>
                                 <div>Status: <field name="state"/></div>
                                 <div>Discipline Type: <field name="discipline_type"/></div>
-                                <div>Committee Decision: <field name="committee_decision"/></div> 
-                                <div class="mt-2">
-                                    <button name="action_escalate_to_ceo" 
-                                            type="object" 
-                                            string="Escalate to CEO" 
-                                            class="btn btn-primary btn-sm"
-                                            attrs="{'invisible': [('committee_decision', '!=', 'reviewed')]}"/>
-                                </div>
+                                <div>Status: <field name="discipline_type" style="color:green;"/></div>
                             </div>
                         </div>
                     </t>
@@ -228,7 +221,7 @@
     <record id="action_discipline_case" model="ir.actions.act_window">
         <field name="name">Discipline Cases</field>
         <field name="res_model">employee.discipline.case</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">kanban,tree,form</field>
         <field name="context">{}</field>
     </record>
 
