--- a/addons/website_hr_recruitment/views/website_hr_recruitment_templates.xml
+++ b/addons/website_hr_recruitment/views/website_hr_recruitment_templates.xml
@@ -166,7 +166,7 @@
                                                 <input id="recruitment1" type="text"
                                                     class="form-control s_website_form_input"
                                                     name="partner_name" required=""
-                                                    data-fill-with="name"/>
+                                                    />
                                             </div>
                                         </div>
                                     </div>
@@ -181,12 +181,7 @@
                                                 <input id="recruitment2" type="email"
                                                     class="form-control s_website_form_input"
                                                     name="email_from" required=""
-                                                    data-fill-with="email"/>
-                                               <t t-if="widget.errors.get('email_from')">
-                                                    <div class="invalid-feedback">
-                                                        <t t-esc="widget.errors.get('email_from')"/>
-                                                    </div>
-                                                </t>
+                                                    />
                                             </div>
                                         </div>
                                     </div>
@@ -201,12 +196,8 @@
                                                 <input id="recruitment3" type="tel"
                                                     class="form-control s_website_form_input"
                                                     name="partner_mobile" required="" 
-                                                    data-fill-with="phone"/>
-                                                 <t t-if="widget.errors.get('partner_mobile')">
-                                                    <div class="invalid-feedback">
-                                                        <t t-esc="widget.errors.get('partner_mobile')"/>
-                                                    </div>
-                                                </t>
+                                                    />
+                                                 
                                             </div>
                                         </div>
                                     </div>
@@ -250,7 +241,7 @@
                                                 <i class="fa fa-linkedin fa-2x m-1 o_linkedin_icon"></i>
                                                 <input id="recruitment4" type="text"
                                                     class="form-control s_website_form_input pl64"
-                                                    placeholder="e.g. https://www.linkedin.com/in/fpodoo/"
+                                                    placeholder="https://www.linkedin.com/in/"
                                                     style="padding-left: 40px"
                                                     name="linkedin_profile"
                                                     data-fill-with="linkedin_profile"/>
